<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imageViweLogo"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textViewAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViweLogo"
                android:layout_centerHorizontal="true"
                android:text="@string/app_version"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/SplitLine_hor1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/textViewAppVersion"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:id="@+id/relayoutLikeUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SplitLine_hor1"
                android:background="@drawable/suggestion_click">

                <ImageView
                    android:id="@+id/imageViewFacebook"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/facebook" />

                <TextView
                    android:id="@+id/textViewFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/imageViewFacebook"
                    android:layout_toRightOf="@+id/imageViewFacebook"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/btn_like_us"
                    android:textColor="@android:color/black" />

                <View
                    android:id="@+id/SplitLine_hor2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/textViewFacebook"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/imageViewFacebook"
                    android:layout_toRightOf="@+id/imageViewFacebook"
                    android:background="@android:color/darker_gray" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relayoutWhatsApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relayoutLikeUs"
                android:background="@drawable/suggestion_click"

                >

                <ImageView
                    android:id="@+id/imageViewWhatsApp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/whatsapp" />

                <TextView
                    android:id="@+id/textViewWhatsApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/imageViewWhatsApp"
                    android:layout_toRightOf="@+id/imageViewWhatsApp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/btn_whats_app"
                    android:textColor="@android:color/black" />

                <View
                    android:id="@+id/SplitLine_hor6"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/textViewWhatsApp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />


            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>