<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:background="#EEEEEE"
        >

       <androidx.coordinatorlayout.widget.CoordinatorLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:id="@+id/cord_top">

           <androidx.appcompat.widget.Toolbar
               android:layout_width="match_parent"
               android:layout_height="?attr/actionBarSize"
               android:layout_gravity="bottom"
               android:id="@+id/toolbar"
               android:background="@color/colorAccent">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:id="@+id/li_bottom_bar"
                   android:weightSum="2"
                   android:orientation="horizontal">

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:id="@+id/tv_favorite"
                       android:drawableTop="@drawable/ic_favorite_white_24dp"
                       android:text="@string/add_to_favorite"
                       android:layout_gravity="center"
                       android:gravity="center"
                       android:textColor="@color/white"/>

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:id="@+id/tv_pronounce"
                       android:drawableTop="@drawable/ic_volume_up_white_24dp"
                       android:layout_gravity="center"
                       android:drawablePadding="4dp"
                       android:textColor="@color/white"
                       android:gravity="center"
                       android:text="@string/pronunciation"/>

               </LinearLayout>
           </androidx.appcompat.widget.Toolbar>

           <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="120dp"
           android:id="@+id/top_bar"
           android:background="@color/colorAccent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/card_view_toolbar"
            android:layout_margin="10dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="false">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search_word"
                android:src="@android:drawable/ic_menu_search"
                android:layout_gravity="end|center"
                android:background="@drawable/selector_button"
                android:padding="10dp"
                android:visibility="gone"/>

            <ImageButton
                android:id="@+id/imageButtonMic"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_mic_black_24dp"
                android:layout_gravity="end|center"
                android:background="@drawable/selector_button"
                android:padding="10dp" />

            <ImageButton
                android:id="@+id/imageButton_close"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_clear_black_24dp"
                android:layout_gravity="end|center"
                android:padding="10dp"
                android:background="@drawable/selector_button"
                android:visibility="gone"
                />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_marginEnd="40dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone"
            android:textSize="18sp"
            android:gravity="center_vertical|left"
            android:windowSoftInputMode="stateVisible"
            android:paddingStart="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textViewHint"
            android:text="@string/eng_mal"
            android:layout_marginLeft="16dp"
            android:textColor="#BDBDBD"
            android:textStyle="bold"
            android:layout_marginTop="13dp"
            android:textSize="@dimen/hint" />


    </androidx.cardview.widget.CardView>


       </RelativeLayout>
           <com.google.android.material.floatingactionbutton.FloatingActionButton
               android:id="@+id/fab_swip"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:clickable="true"
               android:src="@drawable/e"
               app:layout_anchor="@id/top_bar"
               app:layout_anchorGravity="bottom|right|end"
               app:backgroundTint="#2196F3"
               android:layout_margin="16dp"
               android:onClick="onCardClick"
               app:rippleColor="#FFF" />
       </androidx.coordinatorlayout.widget.CoordinatorLayout>

       <!--Ad unit-->
       <!--<com.google.android.gms.ads.NativeExpressAdView-->
           <!--android:id="@+id/adView_native"-->
           <!--android:layout_width="wrap_content"-->
           <!--android:layout_height="wrap_content"-->
           <!--ads:adUnitId="@string/ad_unit_id"-->
           <!--android:layout_centerVertical="true"-->
           <!--android:layout_centerHorizontal="true"-->
           <!--ads:adSize="320x150">-->
       <!--</com.google.android.gms.ads.NativeExpressAdView>-->


       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/re_first"
           android:layout_marginTop="120dp">


    <!--</FrameLayout>-->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone">
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_view_suggestion"
        >

    </ListView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_list_meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_view_meaning">

        </ListView>
    </androidx.cardview.widget.CardView>


</RelativeLayout>

       <!--second-->

       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/re_second"
           android:visibility="gone"
           android:layout_marginTop="120dp"
           >

           <androidx.cardview.widget.CardView
               android:id="@+id/card_view_list_back"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:visibility="gone"
               android:layout_above="@+id/keyBoardLayout">
               <ListView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/list_view_suggestion_back"
                   >

               </ListView>
           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:id="@+id/card_view_list_meaning_back"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:visibility="gone">
               <ListView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/list_view_meaning_back"
                   >

               </ListView>
           </androidx.cardview.widget.CardView>

           <LinearLayout
               android:background="#fff"
               android:id="@+id/keyBoardLayout"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:layout_alignParentBottom="true"
               android:visibility="gone">

               <include
                   android:id="@+id/KeyBoard"
                   layout="@layout/keyboad" />
           </LinearLayout>


       </RelativeLayout>



   </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relayout_feedback"
        android:layout_marginTop="120dp"
        android:visibility="gone"
        android:background="@android:color/darker_gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_feedback"
            android:text="@string/feedback"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/textView_word"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_feedback"
            android:layout_toLeftOf="@+id/buttonFeedBack"
            android:background="@drawable/feedback_text"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="20sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/buttonFeedBack"
            android:text="Send"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/textView_feedback"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewOr"
            android:text="Or"
            android:layout_below="@+id/buttonFeedBack"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_margin="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/button_google_translate"
            android:layout_below="@+id/textViewOr"
            android:text="Use Google Translator"
            android:background="@color/colorPrimary"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"
        />

</androidx.drawerlayout.widget.DrawerLayout>